[build-system]
requires = ["setuptools>=40.6.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nebula"
version = "v1.0.0"
description = "FPGA Development Board Testing Harness"
authors = [
    {name = "Travis F. Collins", email = "travis.collins@analog.com"}
]
dependencies = [
    "pyfiglet == 0.8.post1",
    "fabric == 2.7.1",
    "pyyaml == 6.0.0",
    "pyserial == 3.5",
    "pytest == 7.4.4",
    "pyvesync_v2 == 1.1.0",
    "pysnmp == 4.4.12",
    "pyasn1 == 0.4.8",
    "xmodem == 0.4.7",
    "netifaces >= 0.10.9",
    "click == 8.0.0",
    "usbsdmux >= 0.2.1",
    "tqdm == 4.62.3",
    "beautifulsoup4 == 4.12.3",
    "requests >= 2.25.1",
    "pygithub == 2.2.0",
    "dohq-artifactory == 0.9.2",
    "pynetbox == 7.3.3",
    "pyudev == 0.24.1",
    "decorator == 5.1.1",
    "urllib3 >= 2.2.1"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["nebula*"]
exclude = ["tests*"]
namespaces = true

[project.entry-points.pytest11]
nebula = "nebula.fixtures"

[project.scripts]
nebula = "nebula.main:program.run"

[project.urls]
homepage = "https://sdgtt.github.io/nebula/"
documentation = "https://sdgtt.github.io/nebula/"
repository = "github.com/sdgtt/nebula"